--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,7 @@ body {
   margin: auto;
   text-align: center;
   padding-top: 2rem;
+  /* gap: 20px; */
 }
 
 #chatbox {
@@ -48,7 +49,22 @@ body {
   color: white;
 }
 
-#userInput {
+#chat-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+#chat-form div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+#userInput,
+#temperatureInput {
   width: calc(100% - 100px);
   padding: 10px;
   font-size: 16px;
@@ -56,6 +72,7 @@ body {
   border: 1px solid #ccc;
   border-radius: 4px;
   transition: all 0.3s ease;
+  margin: 0, 10px, 0, 10px;
 }
 
 button[type="submit"] {
