--- a/public/style.css
+++ b/public/style.css
@@ -2,11 +2,19 @@
   box-sizing: border-box;
 }
 
+html {
+  display: flex;
+  height: 100%;
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: #fafafa;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .container {
@@ -88,4 +96,28 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
   background-color: #45a049;
+}
+
+h2 {
+  font-size: 16px;
+  color: #333;
+  margin-bottom: 10px; /* Пространство между заголовком и прогрессбаром */
+  text-align: center;
+}
+
+.progress-container {
+  width: 100%;
+  height: 0.5rem;
+  background-color: #ddd;
+  border-radius: 5px;
+  overflow: hidden;
+  margin: auto;
+  margin-top: 1rem; /* Верхний отступ для лучшей читаемости */
+  margin-bottom: 1rem;
+}
+
+.progress-bar {
+  height: 100%;
+  background-color: #4caf50;
+  transition: width 0.5s ease-in-out;
 }
